local/logs/project.log
2019-09-11T01:27:29.598Z - normal: Load ~/.CocosCreator/settings.json
2019-09-11T01:27:29.691Z - normal: Initializing Asset Database
2019-09-11T01:27:29.695Z - normal: checking language setting...
2019-09-11T01:27:29.695Z - normal: Language: zh
2019-09-11T01:27:30.621Z - success: preview server running at http://localhost:7456
2019-09-11T01:27:30.661Z - success: protocol editor-framework registered
2019-09-11T01:27:30.661Z - success: protocol app registered
2019-09-11T01:27:30.662Z - success: protocol theme registered
2019-09-11T01:27:30.662Z - success: protocol packages registered
2019-09-11T01:27:30.662Z - success: protocol uuid registerred
2019-09-11T01:27:30.662Z - success: protocol db registerred
2019-09-11T01:27:30.662Z - success: protocol thumbnail registerred
2019-09-11T01:27:30.662Z - success: protocol unpack registerred
2019-09-11T01:27:30.662Z - success: protocol disable-commonjs registerred
2019-09-11T01:27:30.755Z - normal: connected!
2019-09-11T01:27:30.757Z - normal: Check project /Users/admin/leishen/raygame/3_test
2019-09-11T01:27:30.758Z - normal: Initializing project /Users/admin/leishen/raygame/3_test
2019-09-11T01:27:31.220Z - normal: Initializing Cocos2d
2019-09-11T01:27:32.203Z - normal: Initializing engine extends
2019-09-11T01:27:32.282Z - success: asset-db-debugger loaded
2019-09-11T01:27:32.284Z - success: baidu-adapter loaded
2019-09-11T01:27:32.286Z - success: color-picker loaded
2019-09-11T01:27:32.402Z - success: fb-audience-network loaded
2019-09-11T01:27:32.467Z - success: fb-live-stream loaded
2019-09-11T01:27:32.471Z - success: google-play-instant loaded
2019-09-11T01:27:32.478Z - success: huawei-runtime loaded
2019-09-11T01:27:32.480Z - success: jsb-adapter loaded
2019-09-11T01:27:32.487Z - success: oppo-runtime loaded
2019-09-11T01:27:32.499Z - success: package-manager loaded
2019-09-11T01:27:32.674Z - success: qqplay-adapter loaded
2019-09-11T01:27:32.677Z - success: runtime-dev-tools loaded
2019-09-11T01:27:32.690Z - success: sdkbox loaded
2019-09-11T01:27:32.703Z - success: tester loaded
2019-09-11T01:27:32.713Z - success: ui-grid loaded
2019-09-11T01:27:32.723Z - success: ui-kit-preview-extra loaded
2019-09-11T01:27:32.735Z - success: ui-kit-preview loaded
2019-09-11T01:27:32.744Z - success: ui-kit loaded
2019-09-11T01:27:32.756Z - success: ui-tree loaded
2019-09-11T01:27:32.762Z - success: vivo-runtime loaded
2019-09-11T01:27:32.764Z - success: weapp-adapter loaded
2019-09-11T01:27:32.820Z - success: assets loaded
2019-09-11T01:27:32.830Z - success: builder loaded
2019-09-11T01:27:33.177Z - success: cocos-services loaded
2019-09-11T01:27:33.190Z - success: console loaded
2019-09-11T01:27:33.229Z - success: fb-instant-games loaded
2019-09-11T01:27:33.232Z - success: google-instant-games loaded
2019-09-11T01:27:33.245Z - success: hierarchy loaded
2019-09-11T01:27:33.259Z - success: inspector loaded
2019-09-11T01:27:33.261Z - success: keystore loaded
2019-09-11T01:27:33.273Z - success: node-library loaded
2019-09-11T01:27:33.276Z - success: package-asset loaded
2019-09-11T01:27:33.278Z - success: preferences loaded
2019-09-11T01:27:33.289Z - success: project-exporter loaded
2019-09-11T01:27:33.302Z - success: project-importer loaded
2019-09-11T01:27:33.311Z - success: project-settings loaded
2019-09-11T01:27:33.323Z - success: scene loaded
2019-09-11T01:27:33.326Z - success: simulator-debugger loaded
2019-09-11T01:27:33.328Z - success: sprite-editor loaded
2019-09-11T01:27:33.369Z - success: store loaded
2019-09-11T01:27:33.383Z - success: timeline loaded
2019-09-11T01:27:33.397Z - success: behaviortree-editor loaded
2019-09-11T01:27:33.419Z - success: @rjoygame_ccc/font-manager loaded
2019-09-11T01:27:33.436Z - success: fsm-editor loaded
2019-09-11T01:27:33.439Z - failed: Failed to load package at /Users/admin/leishen/raygame/3_test/packages/listend: Failed to load main.js: /Users/admin/leishen/raygame/3_test/packages/listend/main.js:43
};
^
SyntaxError: Unexpected token }
    at createScript (vm.js:53:10)
    at Object.runInThisContext (vm.js:95:10)
    at Module._compile (module.js:543:28)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.require (module.js:498:17)
    at require (internal/module.js:20:19)
    at r.series.r (/Applications/CocosCreator.app/Contents/Resources/app.asar/editor-framework/lib/main/package.js:1:2037)
2019-09-11T01:27:33.457Z - success: processon-statemachine loaded
2019-09-11T01:27:35.300Z - normal: Loading packages
2019-09-11T01:27:35.308Z - failed: Failed to load package at /Users/admin/leishen/raygame/3_test/packages/listend: Failed to load main.js: /Users/admin/leishen/raygame/3_test/packages/listend/main.js:43
};
^
SyntaxError: Unexpected token }
    at createScript (vm.js:53:10)
    at Object.runInThisContext (vm.js:95:10)
    at Module._compile (module.js:543:28)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.require (module.js:498:17)
    at require (internal/module.js:20:19)
    at r.series.r (/Applications/CocosCreator.app/Contents/Resources/app.asar/editor-framework/lib/main/package.js:1:2037)
2019-09-11T01:27:35.309Z - normal: Watching packages
2019-09-11T01:27:35.382Z - info: Cocos Services load base data!
2019-09-11T01:27:35.444Z - normal: Run Application
2019-09-11T01:33:01.014Z - warn: [db-task][sync-changes] Backup unused meta file: db://assets/Scripts/src/behavior/index.ts.meta
2019-09-11T01:34:07.746Z - warn: [db-task][sync-changes] Backup unused meta file: db://assets/Scripts/src/behavior/index.js.meta
2019-09-11T01:37:06.950Z - warn: [db-task][sync-changes] Backup unused meta file: db://assets/Scripts/src/behavior/constants.ts.meta
2019-09-11T01:40:11.580Z - warn: [db-task][sync-changes] Backup unused meta file: db://assets/Scripts/src/behavior/constants.js.meta
